# bitbybit

./: .gitignore  README.md  publish.py  pyproject.toml  train.py  train_single.py
src/bitbybit/: __init__.py  patch.py
src/bitbybit/config/: optimized_configs.py  resnet20.py
src/bitbybit/kernel/: __init__.py  _base.py  learned.py  random.py
src/bitbybit/nn/: __init__.py  _base.py  conv2d.py  linear.py
src/bitbybit/utils/: __init__.py  data.py  models.py  score.py
